# arco

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  Spacefile.yml  arco.yml  docker-entrypoint.sh  pyproject.toml
apollo/: .apollorc.yml  Spacefile.yml  __init__.py  main.py
apollo/ansible/: create.yml  delete.yml  facts.yml  install.yml  inventory.yml.j2
apollo/ansible/playbooks/group_vars/: all.yml
apollo/ansible/roles/docker/server/create/tasks/: main.yml
apollo/ansible/roles/docker/server/delete/tasks/: main.yml
apollo/ansible/roles/hcloud/server/create/tasks/: main.yml
apollo/ansible/roles/hcloud/server/delete/tasks/: main.yml
apollo/ansible/roles/inventory/create/tasks/: main.yml
apollo/ansible/roles/inventory/delete/tasks/: main.yml
apollo/ansible/roles/k3s/defaults/: main.yml
apollo/ansible/roles/k3s/tasks/: _setup-manager.yml  main.yml  master.yml
arco/: __init__.py  __main__.py  main.py
