[tool.poetry]
name = "arco"
version = "0.1.3"
description = "An automation API framework for cloud-native SRE and DevOps"
authors = ["Fabian Peter <fabian@p3r.link>"]
license = "LICENSE.md"
readme = "README.md"

[tool.semantic_release]
version_variable = [
    "arco/__init__.py:__version__",
    "pyproject.toml:version"
]
build_command = "poetry build"
#version_pattern = 'pyproject.toml:version = "{version}"(?m)'
changelog_file = "CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
typer = {extras = ["all"], version = "^0.3.2"}
anyconfig = "^0.9.11"
python-dotenv = "^0.15.0"
packaging = "^20.4"
read-version = "^0.3.1"
validators = "^0.18.1"
GitPython = "^3.1.11"
python-semantic-release = "^7.3.0"
jmespath = "^0.10.0"
openshift = "^0.11.2"
ansible = "^2.10.4"
pyperclip = "^1.8.1"
loguru = "^0.5.3"
better-exceptions = "^0.3.2"
python-fsutil = "^0.4.0"
python-benedict = "^0.22.4"
python-slugify = "^4.0.1"

[tool.poetry.scripts]
arco = "arco.main:app"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
